syntax = "proto3";

package document;

option go_package = "proto/document";

message Player {
  enum Order {
    BLACK = 0;
    WHITE = 1;
  }
  Order order = 1;
  string name = 2;
  string note = 3;
}

message FinishedStatus {
  enum Id {
    NOT_FINISHED = 0;
    SUSPEND = 1;
    SURRENDER = 2;
    DRAW = 3;
    REPETITION_DRAW = 4;
    CHECKMATE = 5;
    OVER_TIME_LIMIT = 6;
    FOUL_LOSS = 7;
    FOUL_WIN = 8;
    NYUGYOKU_WIN = 9;
  }
}

message Handicap {
  enum Id {
    NONE = 0;
	DROP_L = 1;
	DROP_L_R = 2;
	DROP_B = 3;
	DROP_R = 4;
	DROP_RL = 5;
	DROP_TWO = 6;
	DROP_THREE = 7;
	DROP_FOUR = 8;
	DROP_FIVE = 9;
	DROP_FIVE_L = 10;
	DROP_SIX = 11;
	DROP_EIGHT = 12;
	DROP_TEN = 13;
	OTHER = 14;
  }
}

message Piece {
  enum Id {
    NULL = 0;
    GYOKU = 1;
    HISHA = 2;
    RYU = 3;
    KAKU = 4;
    UMA = 5;
    KIN = 6;
    GIN = 7;
    NARI_GIN = 8;
    KEI = 9;
    NARI_KEI = 10;
    KYOU = 11;
    NARI_KYOU = 12;
    FU = 13;
    TO = 14;
  }
}

message Pos {
  int32 x = 1;
  int32 y = 2;
}

message Kifu {
  string user_id = 1;
  string kifu_id = 2;

  int64 start_ts = 4;
  int64 end_ts = 5;
  Handicap.Id handicap = 6;
  string game_name = 7;
  repeated Player players = 8;
  map<string, string> other_fields = 9;

  string sfen = 10;
  repeated string aliases = 11;
  int64 created_ts = 12;
  string note = 13;
}

message Step {
  string user_id = 1;
  string kifu_id = 2;
  int32 seq = 3;

  string position = 5;
  Pos src = 6;
  Pos dst = 7;
  Piece.Id piece = 8;
  bool promote = 9;
  bool drop = 10;
  Piece.Id captured = 11;
  FinishedStatus.Id finished_status = 12;
  string sfen = 13;
  int32 timestamp_sec = 14;
  int32 thinking_sec = 15;
  repeated string notes = 16;
}
